添加为用户添加角色接口
